<resources>
    <string name="app_name">Mova-se</string>
    <string name="subtitle">TODOS PODEM SER ATLETAS!</string>
    <string name="btnLoginText">Entrar</string>
    <string name="digite_seu_email">Digite seu e-mail</string>
    <string name="digite_a_sua_senha">Digite a sua senha</string>
    <string name="perfil">Perfil</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="nome_completo">Nome completo:</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="apelido">Apelido:</string>
    <string name="digite_seu_apelido">Digite seu apelido</string>
    <string name="data_nasc">Data de Nascimento</string>
    <string name="celular_com_ddd">Celular (Com DDD):</string>
    <string name="esporte_preferido">Esporte preferido:</string>
    <string name="endereco">Endereço:</string>
    <string name="sexo">Sexo:</string>
    <string name="sexo_preferencial">Sexo preferencial para conexão:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="n_binario">Não binário</string>
    <string name="ambos">Ambos</string>
    <string name="aceito_os_termos">Aceito os termos e regras do aplicativo</string>
    <string name="registre_se">Registre-se</string>
    <string name="email">E-mail:</string>
    <string name="digite_seu_endereço">Digite seu endereço</string>
    <string name="senha">Senha:</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>